--- a/Windows_Programing_06/packages.config
+++ b/Windows_Programing_06/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Apis" version="1.64.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.64.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.64.0" targetFramework="net472" />
+  <package id="Google.Apis.YouTube.v3" version="1.64.0.3205" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.15.0" targetFramework="net472" />
+  <package id="System.CodeDom" version="7.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="7.0.0" targetFramework="net472" />
+  <package id="System.Management" version="7.0.2" targetFramework="net472" />
 </packages>
